[project]
name = "youtube_bot"
version = "0.1.0"
description = "youtube_bot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
youtube_bot = "youtube_bot.main:run"
run_crew = "youtube_bot.main:run"
train = "youtube_bot.main:train"
replay = "youtube_bot.main:replay"
test = "youtube_bot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
